# testrepo

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h.in  versioning.cmake
.github/workflows/: release.yml
